--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-tag-input-component": "^2.0.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
