--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "commitlint": "commitlint --edit"
   },
   "dependencies": {
+    "cli-highlight": "^2.1.11",
     "next": "14.1.0",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-tag-input-component": "^2.0.2"
+    "react-tag-input-component": "^2.0.2",
+    "sequelize": "^6.37.1",
+    "tunnel-ssh": "^5.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
@@ -34,6 +39,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "husky": "^9.0.11",
+    "node-loader": "^2.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
