config: vscode for spells⚡️
Co-Authored-By: RR <157709103+OskarMast@users.noreply.github.com>
Co-Authored-By: mirror0000 <134664641+mirror0000@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,5 +22,5 @@
     "editor.formatOnSave": true
   },
   "editor.tabSize": 2,
-  "cSpell.words": ["tailwindcss"]
+  "cSpell.words": ["authorname", "dateupdated", "newkeywords", "storydata", "storyid", "tagsfromauthor", "tailwindcss"]
 }
