--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "cli-highlight": "^2.1.11",
+    "moment": "^2.30.1",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
@@ -27,7 +28,8 @@
     "react-dom": "^18",
     "react-tag-input-component": "^2.0.2",
     "sequelize": "^6.37.1",
-    "tunnel-ssh": "^5.1.2"
+    "tunnel-ssh": "^5.1.2",
+    "webpack": "^5.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.0.3",
