fix: database service🐞
Co-Authored-By: RR <157709103+OskarMast@users.noreply.github.com>
Co-Authored-By: mirror0000 <134664641+mirror0000@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
 # Database configuration for Sequelize.
 # See https://sequelize.org/v5/manual/getting-started.html#setting-up-a-connection
 
-DATABASE_HOST = "127.0.0.1"
-DATABASE_PORT = 25060
-DATABASE_DATABASE = "defaultdb"
-DATABASE_DIALECT = "postgres"
-DATABASE_USERNAME = "defaultdb"
+DATABASE_HOST     = "127.0.0.1"
+DATABASE_PORT     = 5432
+DATABASE_DATABASE = "postgres"
+DATABASE_DIALECT  = "postgres"
+DATABASE_USERNAME = "postgres"
 DATABASE_PASSWORD = ""
-DATABASE_LOGGING = "true"
+DATABASE_LOGGING  = "true"
+USE_SSL           = "false"
+SSL_CERT          = ""
 
-SSH_SERVER="127.0.0.1"
-SSH_PORT=22
-SSH_USER="root"
-SSH_PASSWORD=""
-
-# NODE_TLS_REJECT_UNAUTHORIZED='0'
+SSH_SERVER        = "127.0.0.1"
+SSH_PORT          = 22
+SSH_USER          = "root"
+SSH_PASSWORD      = ""
